--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header></header>
-    <h1>Monday News!</h1>
+    <header>
+      <h1>Monday News!</h1>
+    </header>
+
     <p>another type of text</p>
     <span>this is a span</span>
   </body>
