added flex to header and som elements to show how to layout them. added grid in the logo

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
   <body>
     <header>
       <h1>Monday News!</h1>
+      <div class="logo"><span>Fake logo</span></div>
+      <nav>
+        <a href="#">Something</a>
+        <a href="#">Something</a>
+        <a href="#">Something</a>
+      </nav>
     </header>
 
     <p>another type of text</p>
