added a yearbook section to show how to layout with grid. made a card to show how to layout the child inside the grid.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,27 @@
       </nav>
     </header>
 
-    <p>another type of text</p>
-    <span>this is a span</span>
+    <section class="yearbook">
+      <a class="card" href="link_to_jennie">
+        <img src="https://picsum.photos/200/300" alt="Jennie" />
+        <h3>Jennie</h3>
+      </a>
+      <a href="link_to_karin">
+        <img src="https://picsum.photos/200/300" alt="Karin" />
+        <h3>Karin</h3>
+      </a>
+      <a href="link_to_maksy">
+        <img src="https://picsum.photos/200/300" alt="Maksy" />
+        <h3>Maksy</h3>
+      </a>
+      <a href="link_to_poya">
+        <img src="https://picsum.photos/200/300" alt="Poya" />
+        <h3>Poya</h3>
+      </a>
+      <a href="link_to_matilda">
+        <img src="https://picsum.photos/200/300" alt="Matilda" />
+        <h3>Matilda</h3>
+      </a>
+    </section>
   </body>
 </html>
